# varkiel-agent

./: .coverage  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .tool-versions  ARCHITECTURE.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  Procfile  README.md  ROADMAP.md  THIRD_PARTY_NOTICES  add_warnings.py  docker-compose.yml  mkdocs.yml  project.yaml  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: architecture.md  contributing.md  index.md  roadmap.md
docs/adr/: README.md
infra/certs/: private_key.pem.example
scripts/: add_spdx_header.py  bootstrap  bootstrap.ps1  build  build.ps1  check  check.ps1  check_spdx_headers.py  clean  clean.ps1  common.sh  coverage  coverage.ps1  dev  dev.ps1  e2e  e2e.ps1  fmt  fmt.ps1  gen-docs  gen-docs.ps1  lint  lint.ps1  migrate  migrate.ps1  package  package.ps1  release  release.ps1  sbom  sbom.ps1  security-scan  security-scan.ps1  test  test.ps1  typecheck  typecheck.ps1  update-deps  update-deps.ps1
src/varkiel/: __init__.py  app.py  audit_logger.py  benchmark.py  central_controller.py  coherence_ethics.py  coherence_monitor.py  constraint_lattice_adapter.py  demo.py  embedding.py  exceptions.py  godel_metric.py  introspective_layer.py  logger.py  main.py  memory_stream.py  minimal_varkiel.py  phenomenological_tracker.py  risk_balancer.py  semantic_resonance.py  state_manager.py  state_vector.py  structural_constraint_engine.py  symbolic_articulator.py  symbolic_coherence_engine.py  symbolic_interpreter.py  test_core.py  utils.py
src/varkiel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/varkiel/tests/: test_constraint_vectors.py  test_paradoxes.py
templates/: admin.html  index.html  login.html
tests/unit/varkiel/: test_constraint_vectors.py  test_state_vector.py
