[project]
name = "varkiel"
version = "1.0.0"
description = "Advanced AI Constraint System"
authors = [
    {name = "Lexsight LLC", email = "contact@lexsight.ai"}
]
license = {text = "AGPL-3.0-only OR Commercial"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "requests>=2.26.0",
    "tenacity>=8.0.0",
    "pydantic>=1.9.0",
    "sentence-transformers>=2.2.0",
    "flask>=2.3.0",
    "flask-login>=0.6.0",
    "prometheus-client>=0.20.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.8.0",
    "torch>=2.1.0",
    "gunicorn>=21.2.0"
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7.5",
    "black>=24.4.2",
    "build>=1.2.1",
    "cyclonedx-bom>=3.14.0",
    "hypothesis>=6.98.0",
    "isort>=5.13.2",
    "mkdocs>=1.5.3",
    "mypy>=1.10.0",
    "pip-audit>=2.7.0",
    "pip-tools>=7.4.1",
    "pytest>=8.2.1",
    "pytest-cov>=4.1.0",
    "python-semantic-release>=9.9.0",
    "ruff>=0.4.8",
    "types-requests>=2.32.0.20240403",
    "types-urllib3>=1.26.25.14"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["varkiel"]
package-dir = { "varkiel" = "src/varkiel" }

[tool.semantic_release]
version_source = "tag"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["varkiel"]

[tool.ruff]
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
extend-select = [
    "B",
    "E",
    "F",
    "I",
    "PGH",
    "PLC",
    "PLE",
    "PLW",
    "RUF",
    "SIM",
]
ignore = [
    "E203",
    "E266",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
ignore_missing_imports = true
show_error_codes = true

[tool.coverage.run]
branch = true
source = ["src"]
